--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -59,7 +59,7 @@ http {
     root          /dev/null;
 
 
-    location ~ "^/d/nuc/([^/]+)/(?<port>[0-9]{3,5})/$" {
+    location ~ "^/d/kandang/([^/]+)/(?<port>[0-9]{3,5})/$" {
       proxy_pass http://provider:$port/;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
